# legacy-report

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  TODOS.md  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-05-06-issue-pagination.md
docs/superpowers/specs/: 2026-05-06-issue-pagination-design.md
legacy_report/: comicvine.py  config.py  db.py  display.py  main.py  menu.py  models.py  publishers.py  tui.py
tests/: test_collection.py  test_comicvine.py  test_menu_flows.py  test_tui.py
