[project]
name = "legacy-report"
version = "1.0.0"
description = "A TUI for managing your comic book collection with Legacy (LGY) numbering"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "sqlmodel>=0.0.19",
    "httpx>=0.27",
    "rich>=13",
    "InquirerPy>=0.3",
    "textual>=0.80",
]

[project.scripts]
legacy-report = "legacy_report.main:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
